remove the config dir stuff... just look for the logback config file.